// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal component should match snapshot with a closed modal 1`] = `null`;

exports[`Modal component should match snapshot with an open modal 1`] = `
<div
  class="sc-htoDjs kwXCJw"
>
  <section
    class="sc-gzVnrw dtKkJq"
  >
    <div
      class="sc-dnqmqq geJMwm"
    >
      <a
        class="sc-bZQynM divcNJ"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.12 15.24A7.12 7.12 0 1 0 8.12 1a7.12 7.12 0 0 0 0 14.24zm0-.95a6.17 6.17 0 1 1 0-12.34 6.17 6.17 0 0 1 0 12.34zm-.084-6.639L6.19 5.804a.475.475 0 0 0-.672.671l1.848 1.848-1.848 1.847a.475.475 0 0 0 .672.671l1.847-1.847 1.848 1.847a.475.475 0 0 0 .67-.671L8.708 8.323l1.848-1.848a.475.475 0 0 0-.671-.671L8.036 7.65z"
            fill="currentColor"
            fill-rule="evenodd"
            stroke="currentColor"
            stroke-width=".4"
          />
        </svg>
        <span
          class="sc-EHOje AkWcR"
        >
          Close
        </span>
      </a>
    </div>
  </section>
  <div
    class="sc-bwzfXH dXmOMB"
    data-test="Overlay"
  />
</div>
`;

exports[`Modal component should match snapshot with an open modal with description array 1`] = `
<div
  class="sc-htoDjs kwXCJw"
>
  <section
    class="sc-gzVnrw dtKkJq"
  >
    <div
      class="sc-dnqmqq geJMwm"
    >
      <p
        class="sc-ifAKCX doFnNx"
      >
        description1
      </p>
      <p
        class="sc-ifAKCX doFnNx"
      >
        description2
      </p>
      <a
        class="sc-bZQynM divcNJ"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.12 15.24A7.12 7.12 0 1 0 8.12 1a7.12 7.12 0 0 0 0 14.24zm0-.95a6.17 6.17 0 1 1 0-12.34 6.17 6.17 0 0 1 0 12.34zm-.084-6.639L6.19 5.804a.475.475 0 0 0-.672.671l1.848 1.848-1.848 1.847a.475.475 0 0 0 .672.671l1.847-1.847 1.848 1.847a.475.475 0 0 0 .67-.671L8.708 8.323l1.848-1.848a.475.475 0 0 0-.671-.671L8.036 7.65z"
            fill="currentColor"
            fill-rule="evenodd"
            stroke="currentColor"
            stroke-width=".4"
          />
        </svg>
        <span
          class="sc-EHOje AkWcR"
        >
          Close
        </span>
      </a>
    </div>
  </section>
  <div
    class="sc-bwzfXH dXmOMB"
    data-test="Overlay"
  />
</div>
`;

exports[`Modal component should match snapshot with an open modal with description string 1`] = `
<div
  class="sc-htoDjs kwXCJw"
>
  <section
    class="sc-gzVnrw dtKkJq"
  >
    <div
      class="sc-dnqmqq geJMwm"
    >
      <p
        class="sc-ifAKCX doFnNx"
      >
        description
      </p>
      <a
        class="sc-bZQynM divcNJ"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.12 15.24A7.12 7.12 0 1 0 8.12 1a7.12 7.12 0 0 0 0 14.24zm0-.95a6.17 6.17 0 1 1 0-12.34 6.17 6.17 0 0 1 0 12.34zm-.084-6.639L6.19 5.804a.475.475 0 0 0-.672.671l1.848 1.848-1.848 1.847a.475.475 0 0 0 .672.671l1.847-1.847 1.848 1.847a.475.475 0 0 0 .67-.671L8.708 8.323l1.848-1.848a.475.475 0 0 0-.671-.671L8.036 7.65z"
            fill="currentColor"
            fill-rule="evenodd"
            stroke="currentColor"
            stroke-width=".4"
          />
        </svg>
        <span
          class="sc-EHOje AkWcR"
        >
          Close
        </span>
      </a>
    </div>
  </section>
  <div
    class="sc-bwzfXH dXmOMB"
    data-test="Overlay"
  />
</div>
`;

exports[`Modal component should match snapshot with an open modal with icon 1`] = `
<div
  class="sc-htoDjs kwXCJw"
>
  <section
    class="sc-gzVnrw dtKkJq"
  >
    <div
      class="sc-dnqmqq geJMwm"
    >
      <div
        class="sc-bxivhb cRcMeL"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.12 15.24A7.12 7.12 0 1 0 8.12 1a7.12 7.12 0 0 0 0 14.24zm0-.95a6.17 6.17 0 1 1 0-12.34 6.17 6.17 0 0 1 0 12.34zm-.084-6.639L6.19 5.804a.475.475 0 0 0-.672.671l1.848 1.848-1.848 1.847a.475.475 0 0 0 .672.671l1.847-1.847 1.848 1.847a.475.475 0 0 0 .67-.671L8.708 8.323l1.848-1.848a.475.475 0 0 0-.671-.671L8.036 7.65z"
            fill="currentColor"
            fill-rule="evenodd"
            stroke="currentColor"
            stroke-width=".4"
          />
        </svg>
      </div>
      <a
        class="sc-bZQynM divcNJ"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.12 15.24A7.12 7.12 0 1 0 8.12 1a7.12 7.12 0 0 0 0 14.24zm0-.95a6.17 6.17 0 1 1 0-12.34 6.17 6.17 0 0 1 0 12.34zm-.084-6.639L6.19 5.804a.475.475 0 0 0-.672.671l1.848 1.848-1.848 1.847a.475.475 0 0 0 .672.671l1.847-1.847 1.848 1.847a.475.475 0 0 0 .67-.671L8.708 8.323l1.848-1.848a.475.475 0 0 0-.671-.671L8.036 7.65z"
            fill="currentColor"
            fill-rule="evenodd"
            stroke="currentColor"
            stroke-width=".4"
          />
        </svg>
        <span
          class="sc-EHOje AkWcR"
        >
          Close
        </span>
      </a>
    </div>
  </section>
  <div
    class="sc-bwzfXH dXmOMB"
    data-test="Overlay"
  />
</div>
`;

exports[`Modal component should match snapshot with an open modal with title 1`] = `
<div
  class="sc-htoDjs kwXCJw"
>
  <section
    class="sc-gzVnrw dtKkJq"
  >
    <div
      class="sc-dnqmqq geJMwm"
    >
      <h1
        class="sc-htpNat emkUyl"
      >
        title
      </h1>
      <a
        class="sc-bZQynM divcNJ"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.12 15.24A7.12 7.12 0 1 0 8.12 1a7.12 7.12 0 0 0 0 14.24zm0-.95a6.17 6.17 0 1 1 0-12.34 6.17 6.17 0 0 1 0 12.34zm-.084-6.639L6.19 5.804a.475.475 0 0 0-.672.671l1.848 1.848-1.848 1.847a.475.475 0 0 0 .672.671l1.847-1.847 1.848 1.847a.475.475 0 0 0 .67-.671L8.708 8.323l1.848-1.848a.475.475 0 0 0-.671-.671L8.036 7.65z"
            fill="currentColor"
            fill-rule="evenodd"
            stroke="currentColor"
            stroke-width=".4"
          />
        </svg>
        <span
          class="sc-EHOje AkWcR"
        >
          Close
        </span>
      </a>
    </div>
  </section>
  <div
    class="sc-bwzfXH dXmOMB"
    data-test="Overlay"
  />
</div>
`;
